# Camera3D

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/lab1/: lab1-讲义.md  lab1.md  report.md
docs/lab1/report_assets/: make_image_grid.py
docs/lab1/report_assets/task1/: task1_summary.csv
docs/lab1/report_assets/task1/merged/: S1-1_alignment_summary.csv  S1-2_alignment_summary.csv  S1-3_alignment_summary.csv
docs/lab1/report_assets/task2/: task2_summary.csv  task2_summary_current.csv
docs/lab2/: lab2-讲义.md  lab2.md  paper.md
lab1/: lab1-讲义.md  lab1.md  report.md
lab2/: layout.json
scripts/: plot_task4_report.py  run_lab1_pipeline.ps1  run_lab1_pipeline.sh  select_task2_segments.py  setup_task3_yolo.ps1  task1_build_full_result.ps1  task1_build_full_result.sh  task1_fps_sweep_full.ps1  task1_fps_sweep_full.sh  task2_full_pipeline.ps1  task2_full_pipeline.sh  task3_full_pipeline.ps1  task3_full_pipeline.sh  task4_video_geometry_fps16.py
src/lab1/: __init__.py  cli.py  colmap_utils.py  geometry_utils.py  logging_utils.py  task1.py  task2.py  task3.py  task4.py
src/lab2/: __init__.py
