[project]
name = "camera3d"
version = "0.1.0"
description = "Camera3D labs managed by uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
]

[project.scripts]
lab1 = "lab1.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab1", "src/lab2"]
