[project]
name = "camera3d"
version = "0.1.0"
description = "Camera3D labs managed by uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pillow>=10.4.0",
  "torch==2.5.1",
  "torchvision==0.20.1",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[project.optional-dependencies]
task3-yolo = [
  "ultralytics>=8.3.0",
]

[project.scripts]
lab1 = "lab1.cli:main"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab1", "src/lab2"]
